# Flaskapp

./: pyproject.toml
app/: __init__.py
app/main/: views.py
app/templates/main/: home.html
