[tool.poetry]
name = "flaskapp"
version = "0.1.0"
description = ""
authors = ["Enzo1603 <96661578+Enzo1603@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
Flask-Caching = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
